[gd_scene load_steps=4 format=3 uid="uid://dks20bncer5q5"]

[ext_resource type="Script" path="res://scenes/screens/end_screen.gd" id="1_ef8tl"]
[ext_resource type="Theme" uid="uid://22unjvn8w818" path="res://ui_theme.tres" id="3_bjb5w"]
[ext_resource type="Script" path="res://scenes/screens/game_ui/timer_label.gd" id="3_kkfmo"]

[node name="end_menu" type="CanvasLayer"]
script = ExtResource("1_ef8tl")
success_color = Color(0.0313726, 0.878431, 0.129412, 1)
fail_color = Color(0.815686, 0.0509804, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_bjb5w")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Subject" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 28
text = "SUBJECT"
vertical_alignment = 1

[node name="SeedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 34
text = "#213456"
vertical_alignment = 1

[node name="Result" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 28
text = "RESULT"
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Success" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.803922, 0.176471, 1)
theme_override_font_sizes/font_size = 42
text = "SUCCESS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.603922, 0.627451, 0.611765, 1)
theme_override_font_sizes/font_size = 28
text = "10:00:142"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_kkfmo")

[node name="ReplayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "REPLAY"

[node name="PlayButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "NEW SUBJECT"

[node name="MainMenu" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "MAIN MENU"

[connection signal="button_down" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ReplayButton" to="." method="_on_replay_button_button_down"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
